Fixed overflow in Firefox

--- a/src/main/webapp/css/App.css
+++ b/src/main/webapp/css/App.css
@@ -526,6 +526,7 @@ html {
     height: 100%;
     padding-left: 10px;
     padding-right: 10px;
+    overflow: hidden;
     /*padding-bottom: 8px;
     padding-top: 8px;    */
 }
